# dangerous_tux

./: .gitignore  .travis.yml  CMakeLists.txt  DT_gyroalien.txt  DT_highscore  DT_save  DT_save1  DT_save3  DangerousTux  DangerousTux.html  DangerousTux.html.mem  DangerousTux.js  DangerousTux_LOG.txt  LICENSE  Makefile  Makefile.emscripten  Makefile.emscripten~  Makefile.mingw  Makefile.old  Makefile.win  Makefile.win~  Makefile~  README.md  aliens.hpp  corrigir.txt  gameevent_manager.hpp  gameevent_manager.hpp~  gamescreen.hpp  gamesignal.hpp  gun.hpp  historico.txt  level.hpp  level.hpp~  out.txt  player.hpp  player.hpp~  teste  teste.cpp
chora_engine-2-master/: .gitignore  .travis.yml  CMakeLists.txt  CREDITS  Chora.hpp  LICENSE  Makefile.old  README.md  sdl.hpp
chora_engine-2-master/SDL_gfx/: SDL_framerate.cpp  SDL_framerate.hpp  version.txt
chora_engine-2-master/fonter/: fonter.cpp  fonterJSON.cpp
chora_engine-2-master/fonter/SDL_SavePNG/: savepng
chora_engine-2-master/game/: Elements.cpp  Elements.hpp  Entity.cpp  Entity.hpp  EntityCollision.cpp  EntityCollision.hpp  Input.cpp  Input.hpp  Key.cpp  Key.hpp
chora_engine-2-master/gui/: bar.cpp  bar.hpp  button.cpp  button.hpp  label.cpp  label.hpp  textinput.cpp  textinput.hpp  widget.cpp  widget.hpp  writer.cpp  writer.hpp
chora_engine-2-master/include/: Exception.hpp  animation.hpp  background.hpp  camera.hpp  collision.hpp  movable.hpp  sprite.hpp  statemachine.hpp  textureid.hpp  texturer.hpp  util.hpp  vect.hpp
chora_engine-2-master/include/renderer/: SDLRenderer.hpp  renderer.hpp
chora_engine-2-master/other/: chora_TODO.txt  chora_version.txt
chora_engine-2-master/platform/: tilemap.cpp  tilemap.hpp  tilemapview.cpp  tilemapview.hpp
chora_engine-2-master/sound/: soundplayer.cpp  soundplayer.hpp
chora_engine-2-master/src/: animation.cpp  background.cpp  camera.cpp  collision.cpp  movable.cpp  sprite.cpp  statemachine.cpp  textureid.cpp  texturer.cpp  util.cpp  vect.cpp
chora_engine-2-master/src/renderer/: SDLRenderer.cpp  renderer.cpp
images/: images  levels
images/intro_scene/: scene6_construction.xcf
include/: background.hpp  camera.hpp  light.hpp  tilemap.hpp  util.hpp
include/gui/: bar.hpp  widget.hpp  writer.hpp
levels/: level1.txt  level2.1.txt  level2.txt  level3.txt  level4.txt  level5.txt  menumap.txt  transition1.txt  transition1.txt~  transition2.txt  transition2.txt~
src/: aliens.hpp  aliensdef.hpp  circlealien.cpp  circlealien.hpp  dangerous_tux.cpp  dangerous_tux.cpp~  flyeralien.cpp  flyeralien.hpp  gamecredits.cpp  gamecredits.hpp  gameentity.cpp  gameentity.hpp  gameevent_manager.cpp  gameevent_manager.hpp  gameintroduction.cpp  gameintroduction.hpp  gamemenu.cpp  gamemenu.hpp  gameover.cpp  gameover.hpp  gamescreen.cpp  gamescreen.cpp~  gamescreen.hpp  gamescreen.hpp~  gamesignal.cpp  gamesignal.hpp  gametitle.cpp  gametitle.hpp  gametransition.cpp  gametransition.hpp  gamevideo.hpp  gun.cpp  gun.hpp  gyroalien.cpp  gyroalien.hpp  highscore.cpp  highscore.hpp  jetpack.cpp  jetpack.hpp  level.cpp  (+15 more)
src/chora_engine/: CMakeLists.txt  Makefile  Makefile.emscripten  Makefile.mingw  animation.cpp  animation.hpp  background.cpp  background.hpp  camera.cpp  camera.hpp  chora.hpp  chora_TODO.txt  chora_version.txt  collision.cpp  collision.hpp  libchoraWIN.lib  movable.cpp  movable.hpp  sdl.hpp  sprite.cpp  sprite.hpp  statemachine.cpp  statemachine.hpp  test  test.cpp  teste.cpp  teste.html  teste.js  util.cpp  util.hpp  vect.hpp
src/chora_engine/SDL_gfx/: SDL_framerate.cpp  SDL_framerate.hpp  SDL_gfxBlitFunc.cpp  SDL_gfxPrimitives.cpp  SDL_gfxPrimitives.hpp  SDL_rotozoom.cpp  SDL_rotozoom.hpp
src/chora_engine/gui/: bar.cpp  bar.hpp  button.cpp  button.hpp  call.hpp  label.cpp  label.hpp  menubar.hpp  widget.cpp  widget.hpp  writer.cpp  writer.hpp
src/chora_engine/platform/: tilemap.cpp  tilemap.cpp~  tilemap.hpp  tilemap.hpp~
src/chora_engine/sound/: soundplayer.cpp  soundplayer.hpp
src/chora_engine/tile/: tilemap.hpp
src/light_engine/: animation.hpp  background.hpp  camera.hpp  collision.hpp  fpsmanager.hpp  light.hpp  movable.hpp  statemachine.hpp  tilemap.hpp  util.hpp  util.hpp~  vect.hpp
src/light_engine/SDL_gfx/: SDL_framerate.h  SDL_framerate.h~
src/light_engine/gui/: bar.hpp  button.hpp  call.hpp  gamemenu.hpp  label.hpp  menubar.hpp  widget.hpp  writer.hpp  writer.hpp~
src/light_engine/sound/: soundplayer.hpp  soundplayer.hpp~
